deploy/control-plane/ingress/nginx/http/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: cno-ui
  name: cno-ui
spec:
  ingressClassName: nginx
  rules:
  - host: cno.INGRESS_DOMAIN
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cno-ui
            port:
              number: 80
